start work on perlin hexagon background

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "^1.7.3",
     "express": "^4.16.3",
     "morgan": "^1.9.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "deasync": "^0.1.16"
   }
 }
