--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node .",
     "dev": "parcel src/index.pug",
-    "build": "NODE_ENV=production node build",
+    "build": "node build",
     "deploy": "npm run build && gh-pages -d dist"
   },
   "author": "Stojan Jovanovic",
