--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "dependencies": {
     "compression": "^1.7.3",
-    "express": "^4.16.3",
-    "morgan": "^1.9.1",
-    "pug": "^2.0.3",
     "deasync": "^0.1.16",
-    "node-forge": ">=0.10.0",
-    "yargs-parser": ">=15.0.1",
     "dot-prop": ">=4.2.1",
-    "elliptic": ">=6.5.3",
-    "lodash": ">=4.17.21"
+    "elliptic": "^6.5.4",
+    "express": "^4.16.3",
+    "lodash": ">=4.17.21",
+    "morgan": "^1.9.1",
+    "node-forge": ">=0.10.0",
+    "pug": "^2.0.3",
+    "yargs-parser": ">=15.0.1"
   }
 }
